changed ui to not display dead enemies, changed gameboardutil map initialization to use a non java9 way to add positions to the connectedPositions Map